--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100%;
   margin: 0;
   overflow: hidden;
   font-family: 'Lato', sans-serif;
@@ -187,4 +188,32 @@ h1 {
     padding: 12px;
     min-width: 500px;
     max-width: 100%;
+  }
+
+  @media screen and (max-width:850px) {
+    .clear {
+      bottom: 10px;
+      left: 20px;
+    }
+  }
+
+  @media screen and (max-width:550px) {
+    h1 {
+      font-size: 20px;
+    }
+
+    .clear {
+      bottom: 5px;
+      left: 20px;
+      font-size: 9px;
+    }
+
+    .cards {
+      width: 300px;
+   }
+
+  .btn-small {
+    font-size: 9px;
+    padding: 5px 5px;
+  }
   }
